@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.8-8
-Date: 2012-04-17
+Date: 2012-04-18
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
