@@ -1,4 +1,5 @@
 0.8-8
+- plotTS(): add argument teos
 - add teos() as an interface to the TEOS-10 library
 - add moonAngle() plus several other astronomy-related functions, e.g. julianDay()
 
